# py-snapshot

./: .gitignore  README.md  env.exemple  pyproject.toml
data/: computers.json
src/vnc_snapshot/: __init__.py  archiver.py  config.py  main.py  scheduler.py  utils.py
